--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.21.1",
     "firebase-admin": "^12.6.0",
     "socket.io": "^4.8.0"
   }
